Fixes triggers overflow issues in tags list

--- a/stylesheets/manageList.less
+++ b/stylesheets/manageList.less
@@ -46,9 +46,11 @@
 
 .tagManagerTagList {
   .triggers {
+    min-width: 12rem;
     .chip {
       display: inline-block;
       margin-bottom: 4px;
+      height: unset;
     }
   }
 }
